Fixed bug where Contact Me was not shown on mobile view

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -47,10 +47,36 @@ body {
     text-align: center;
 
     a {
+      width: 100%;
       text-decoration: none;
       color: white;
-      padding: 1.5rem 0;
+      padding: 0.2rem 0;
       transition: all 0.5s;
+    }
+  }
+
+  #cv-li {
+    display: flex;
+    justify-content: center;
+
+    .cv-link {
+      &::after {
+        content: "Resume / CV";
+        font-size: 0.75rem;
+      }
+    }
+  }
+
+  #contact-li {
+    display: flex;
+    justify-content: center;
+
+    .contact-link {
+      &::after {
+        content: "raymond.doan94@gmail.com";
+        font-size: 0.75rem;
+      }
+
     }
   }
 }
@@ -59,6 +85,11 @@ body {
 .open {
   transition: all 0.5s;
   height: 5rem;
+}
+
+// Icon Size
+.fa {
+  font-size: 2rem;
 }
 
 // Desktop View
@@ -195,10 +226,6 @@ body {
         a{
           text-decoration: none;
           color: white;
-
-          i {
-            font-size: 2rem;
-          }
         }
       }
     }
